--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Sorin Personal Site</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/hamburger.png" alt="A Photo With A Hamburger" height="150" width="150"></td>
+      <td><img src="/hamburger.png" alt="A Photo With A Hamburger" height="150" width="150"></td>
       <td><h1>Sorin Andrei</h1>
         <p>
           <em>Absolvent al liceului de <strong><a href="https://www.ltedeleanu.ro/">Chimie</a></strong></em>
